# em_view

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: build-nsis.ps1  build-onefile.ps1
src/: App.tsx  format.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/: emview.nsi
src-tauri/src/: lib.rs  main.rs  parser.rs
src-tauri/tests/: 683_VIA_KB_NOOS.map  STD_Mouse_Solution.axf  STD_Mouse_Solution.map  sample_regression.rs
src/components/: DataTable.tsx  DependencyGraphView.tsx  Modal.tsx  Treemap.tsx
src/hooks/: useElementSize.ts  useVirtualRows.ts
src/types/: analysis.ts
