[package]
name = "emview-tauri"
version = "1.1.0"
description = "Rust Tauri port of EMView"
authors = ["EMView"]
edition = "2021"

[lib]
name = "emview_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "emview-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
encoding_rs = "0.8.35"
goblin = "0.9.3"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "2.0.3"

[dev-dependencies]
tempfile = "3.14.0"
